versions/v0.12.x/service/python-sdk/client/generate-key.mdx
---
title: "Generate Key"
mode: "wide"
---

Generates a cryptographically secure 32-byte encryption key suitable for creating encrypted indexes.

```python
@staticmethod
generate_key() -> bytes
```

### Returns

`bytes`: A 32-byte object containing cryptographically secure random data suitable for index encryption.

### Security Notes

- Uses Python's `secrets.token_bytes()` which leverages OS entropy sources for maximum security
- Each generated key is unique and provides strong 256-bit encryption
- Keys should be stored securely and backed up - losing a key means losing access to the encrypted index

### Example Usage

```python
from cyborgdb import Client

client = Client(base_url='http://localhost:8000', api_key='your-api-key')

# Generate a secure encryption key
index_key = client.generate_key()
print(f'Generated key length: {len(index_key)}')  # Output: 32

index = client.create_index(
    'my-secure-index',
    index_key,
)

# IMPORTANT: Store the key securely for future access
# key_hex = index_key.hex()
# print(f'Store this key safely: {key_hex}')
```